[gd_scene load_steps=9 format=3 uid="uid://bwlclhmccg6bc"]

[ext_resource type="Script" uid="uid://elt5qe8ypdx" path="res://scenes/main_menu.gd" id="1_8ln24"]
[ext_resource type="FontFile" uid="uid://c8tlmsavwfw2o" path="res://assets/fonts/The Bomb Sound.otf" id="1_ekxnf"]
[ext_resource type="Texture2D" uid="uid://bbcyci7b0mdhp" path="res://assets/bgs/scifi wallpaper.png" id="1_wu84c"]
[ext_resource type="FontFile" uid="uid://sfn7hpfvaq0x" path="res://assets/fonts/Baby Gemoy.ttf" id="2_bqqt6"]
[ext_resource type="FontFile" uid="uid://bc66623lppcov" path="res://assets/fonts/Exton Free Trial.otf" id="4_8ln24"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_8ln24"]
bg_color = Color(0, 0, 0, 1)
corner_radius_top_left = 4
corner_radius_top_right = 4
corner_radius_bottom_right = 4
corner_radius_bottom_left = 4

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_rtw2f"]
bg_color = Color(0, 0, 0, 1)
corner_radius_top_left = 4
corner_radius_top_right = 4
corner_radius_bottom_right = 4
corner_radius_bottom_left = 4

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_oa1go"]
bg_color = Color(0, 0.69803923, 0, 1)
corner_radius_top_left = 4
corner_radius_top_right = 4
corner_radius_bottom_right = 4
corner_radius_bottom_left = 4

[node name="MainMenu" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_8ln24")

[node name="TextureRect" type="TextureRect" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
texture = ExtResource("1_wu84c")
expand_mode = 1

[node name="ColorRect" type="ColorRect" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
color = Color(0, 0, 0, 0.45882353)

[node name="alien" type="Label" parent="."]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -38.5
offset_top = -72.0
offset_right = 38.5
offset_bottom = -40.0
grow_horizontal = 2
grow_vertical = 2
theme_override_colors/font_color = Color(0, 0.89411765, 0, 1)
theme_override_colors/font_outline_color = Color(0, 0, 0, 1)
theme_override_constants/outline_size = 5
theme_override_fonts/font = ExtResource("2_bqqt6")
theme_override_font_sizes/font_size = 32
text = "Alien"

[node name="bounce" type="Label" parent="."]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -63.0
offset_top = -40.0
offset_right = 63.0
offset_bottom = -16.0
grow_horizontal = 2
grow_vertical = 2
mouse_filter = 0
theme_override_colors/font_color = Color(0, 0, 0, 1)
theme_override_colors/font_outline_color = Color(0, 1, 0, 1)
theme_override_constants/outline_size = 5
theme_override_fonts/font = ExtResource("2_bqqt6")
theme_override_font_sizes/font_size = 24
text = "Bounce"

[node name="VBoxContainer" type="VBoxContainer" parent="."]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -63.0
offset_top = -4.0
offset_right = 63.0
offset_bottom = 79.0
grow_horizontal = 2
grow_vertical = 2

[node name="StartButton" type="Button" parent="VBoxContainer"]
custom_minimum_size = Vector2(0, 24)
layout_mode = 2
theme_override_colors/font_hover_color = Color(0, 0, 0, 1)
theme_override_fonts/font = ExtResource("4_8ln24")
theme_override_styles/normal = SubResource("StyleBoxFlat_8ln24")
theme_override_styles/pressed = SubResource("StyleBoxFlat_rtw2f")
theme_override_styles/hover = SubResource("StyleBoxFlat_oa1go")
text = "Start"

[node name="TutorialButton" type="Button" parent="VBoxContainer"]
custom_minimum_size = Vector2(0, 24)
layout_mode = 2
theme_override_colors/font_hover_color = Color(0, 0, 0, 1)
theme_override_fonts/font = ExtResource("4_8ln24")
theme_override_styles/normal = SubResource("StyleBoxFlat_8ln24")
theme_override_styles/pressed = SubResource("StyleBoxFlat_rtw2f")
theme_override_styles/hover = SubResource("StyleBoxFlat_oa1go")
text = "Tutorial"

[node name="QuitButton" type="Button" parent="VBoxContainer"]
custom_minimum_size = Vector2(0, 24)
layout_mode = 2
theme_override_colors/font_hover_color = Color(0, 0, 0, 1)
theme_override_fonts/font = ExtResource("4_8ln24")
theme_override_styles/normal = SubResource("StyleBoxFlat_8ln24")
theme_override_styles/pressed = SubResource("StyleBoxFlat_rtw2f")
theme_override_styles/hover = SubResource("StyleBoxFlat_oa1go")
text = "Quit"

[node name="HighscoreLabel" type="Label" parent="."]
layout_mode = 1
anchors_preset = 1
anchor_left = 1.0
anchor_right = 1.0
offset_left = -63.0
offset_top = 5.0
offset_right = -5.0
offset_bottom = 14.0
grow_horizontal = 0
theme_override_colors/font_outline_color = Color(0, 0, 0, 1)
theme_override_constants/outline_size = 3
theme_override_fonts/font = ExtResource("1_ekxnf")
theme_override_font_sizes/font_size = 8
text = "Highscore: 1000"

[connection signal="mouse_entered" from="VBoxContainer/StartButton" to="." method="_on_start_button_mouse_entered"]
[connection signal="pressed" from="VBoxContainer/StartButton" to="." method="_on_start_button_pressed"]
[connection signal="mouse_entered" from="VBoxContainer/TutorialButton" to="." method="_on_tutorial_button_mouse_entered"]
[connection signal="pressed" from="VBoxContainer/TutorialButton" to="." method="_on_tutorial_button_pressed"]
[connection signal="mouse_entered" from="VBoxContainer/QuitButton" to="." method="_on_quit_button_mouse_entered"]
[connection signal="pressed" from="VBoxContainer/QuitButton" to="." method="_on_quit_button_pressed"]
